@@ -5,26 +5,35 @@ export LC_ALL=en_US.utf-8
 export LANG=$LC_ALL
 
 export MAVEN_HOME=$HOME/.m2
+
 #export M2_HOME="/usr/local/maven"
 #export M2="$M2_HOME/bin"
-export MAVEN_OPTS="-d64 -server -Xmx1200m -Xms256m -Djava.awt.headless=true"
+#export MAVEN_OPTS="-d64 -server -Xmx1200m -Xms256m -Djava.awt.headless=true"
 
 export EDITOR="nano"
 
 
-/usr/libexec/java_home -v 1.7 > /dev/null  2>&1
+/usr/libexec/java_home -v 1.8 > /dev/null  2>&1
 if [ $? -eq 0 ]; then
-	export JAVA_HOME=$(/usr/libexec/java_home -v 1.7)
+	export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)
 else
-	export JAVA_HOME=$(/usr/libexec/java_home -v 1.6)
+	/usr/libexec/java_home -v 1.7 > /dev/null  2>&1
+	if [ $? -eq 0 ]; then
+		export JAVA_HOME=$(/usr/libexec/java_home -v 1.7)
+	else
+		export JAVA_HOME=$(/usr/libexec/java_home -v 1.6)
+	fi
 fi
+
+
+
 export IDEA_JDK=$JAVA_HOME
 
 export HADOOP_HOME=/usr/local/hadoop
 export ACTIVEMQ_HOME=/usr/local/activemq
 export SCALA_HOME=/usr/local/scala
 
-export MAVEN_OPTS="-Xms256m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=512m"
+export MAVEN_OPTS="-Xms256m -Xmx2048m"
 export CATALINA_HOME=/usr/local/tomcat
 export PLAY_HOME=/usr/local/play
 
